--- a/src/components/Menu/index.css
+++ b/src/components/Menu/index.css
@@ -11,8 +11,7 @@
   top: 0;
   bottom: 0;
   width: 300px;
-  background-color: #2f3136;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .5);
+  background-color: #000;
 }
 
 .sidebarOverlay {
@@ -22,7 +21,7 @@
   right: 0;
   top: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .8);
 }
 
 .sidebar input {
@@ -42,14 +41,6 @@
 .subList {
   border-radius: 2px;
   background-color: rgba(0, 0, 0, .1);
-}
-
-.sub {
-  border-radius: 2px;
-}
-
-.sub + .sub {
-  border-top: rgba(0, 0, 0, .2) 1px solid;
 }
 
 .sub button {
