--- a/src/components/NavBtn/index.css
+++ b/src/components/NavBtn/index.css
@@ -3,10 +3,10 @@
   outline: none;
   min-width: 48px;
   height: 48px;
-  background-color: rgba(0, 0, 0, .1);
+  background-color: #36393f;
   border-radius: 4px;
   font-size: 20px;
-  color: rgba(255, 255, 255, .1);
+  color: #000;
   cursor: pointer;
 }
 
