--- a/src/components/NavBtn/index.css
+++ b/src/components/NavBtn/index.css
@@ -4,7 +4,7 @@
   min-width: 48px;
   height: 48px;
   background-color: #36393f;
-  border-radius: 4px;
+  border-radius: 0;
   font-size: 20px;
   color: #000;
   cursor: pointer;
