--- a/src/components/NavBtn/index.css
+++ b/src/components/NavBtn/index.css
@@ -3,10 +3,10 @@
   outline: none;
   min-width: 48px;
   height: 48px;
-  background-color: #36393f;
+  background-color: transparent;
   border-radius: 0;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   cursor: pointer;
 }
 
