--- a/src/components/Controls/index.css
+++ b/src/components/Controls/index.css
@@ -1,10 +1,10 @@
 .controls {
   position: fixed;
-  z-index: 10;
   left: 0;
   right: 0;
   bottom: 0;
   color: #FFF;
+  background-color: #36393f;
 }
 
 .left {
@@ -19,8 +19,7 @@
   display: inline-block;
   padding: 10px 20px;
   line-height: 28px;
-  background-color: #36393f;
   font-size: 20px;
-  color: #000;
+  color: #fff;
   text-decoration: none;
 }
