remove prop types because why the fuck

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,7 @@ body {
   margin: 0;
   font-family: "Helvetica Neue";
 }
+
+video::-webkit-media-controls-overlay-play-button {
+  display: none;
+}
